enlace de paginas

--- a/Folder/page2.html
+++ b/Folder/page2.html
@@ -25,13 +25,13 @@
 
     <ul>
         <li>
-            <a href="">Inicio</a>
+            <a href="../index.html">Inicio</a>
         </li>
         <li>
-            <a href="">Aphotecary diaries</a>
+            <a href="../Folder/page2.html">Aphotecary diaries</a>
         </li>
         <li>
-            <a href=""> Solo leveling</a>
+            <a href="../Folder/page3.html"> Solo leveling</a>
         </li>
     </ul>
     
