--- a/Folder/page3.html
+++ b/Folder/page3.html
@@ -24,13 +24,13 @@
 
     <ul>
         <li>
-            <a href="">Inicio</a>
+            <a href="../index.html">Inicio</a>
         </li>
         <li>
-            <a href="">Aphotecary diaries</a>
+            <a href="../Folder/page1.html">Aphotecary diaries</a>
         </li>
         <li>
-            <a href=""> Frieren </a>
+            <a href="../Folder/page3.html"> Frieren </a>
         </li>
     </ul>
     
