--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <ul>
         <li>
-            <a href="">Apothecary diaries</a>
+            <a href="../lab-02/Folder/page1.html">Apothecary diaries</a>
         </li>
         <li>
-            <a href="">Frieren</a>
+            <a href="../lab-02/Folder/page2.html">Frieren</a>
         </li>
         <li>
-            <a href=""> Solo leveling</a>
+            <a href="../lab-02/Folder/page3.html"> Solo leveling</a>
         </li>
     </ul>
     
