--- a/Folder/page2.html
+++ b/Folder/page2.html
@@ -25,13 +25,13 @@
 
     <ul>
         <li>
-            <a href="../index.html">Inicio</a>
+            <a href="../index.html" target="_blank">Inicio</a>
         </li>
         <li>
-            <a href="../Folder/page2.html">Aphotecary diaries</a>
+            <a href="../Folder/page2.html" target="_blank">Aphotecary diaries</a>
         </li>
         <li>
-            <a href="../Folder/page3.html"> Solo leveling</a>
+            <a href="../Folder/page3.html" target="_blank"> Solo leveling</a>
         </li>
     </ul>
     
