--- a/Folder/page1.html
+++ b/Folder/page1.html
@@ -20,13 +20,13 @@
 
     <ul>
         <li>
-            <a href="../index.html" target="_blank">Inicio</a>
+            <a href="/index.html" target="_blank">Inicio</a>
         </li>
         <li>
-            <a href="../Folder/page2.html" target="_blank">Frieren</a>
+            <a href="./page2.html" target="_blank">Frieren</a>
         </li>
         <li>
-            <a href="../Folder/page3.html" target="_blank"> Solo leveling</a>
+            <a href="./page1.html" target="_blank"> Solo leveling</a>
         </li>
     </ul>
 
