arreglos link index

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <ul>
         <li>
-            <a href="../lab-02/Folder/page1.html" target="_blank">Apothecary diaries</a>
+            <a href="./Folder/page1.html" target="_blank">Apothecary diaries</a>
         </li>
         <li>
-            <a href="../lab-02/Folder/page2.html" target="_blank">Frieren</a>
+            <a href="./Folder/page2.html" target="_blank">Frieren</a>
         </li>
         <li>
-            <a href="../lab-02/Folder/page3.html" target="_blank"> Solo leveling</a>
+            <a href="./Folder/page3.html" target="_blank"> Solo leveling</a>
         </li>
     </ul>
     
