--- a/Folder/page3.html
+++ b/Folder/page3.html
@@ -24,13 +24,13 @@
 
     <ul>
         <li>
-            <a href="../index.html" target="_blank">Inicio </a>
+            <a href="/index.html" target="_blank">Inicio </a>
         </li>
         <li>
-            <a href="../Folder/page1.html" target="_blank">Aphotecary diaries</a>
+            <a href="/Folder/page1.html" target="_blank">Aphotecary diaries</a>
         </li>
         <li>
-            <a href="../Folder/page3.html" target="_blank"> Frieren </a>
+            <a href="/Folder/page3.html" target="_blank"> Frieren </a>
         </li>
     </ul>
     
